fix:In firefox visibility not play well

--- a/src/plugins/widgets/quote/Quote.sass
+++ b/src/plugins/widgets/quote/Quote.sass
@@ -1,6 +1,5 @@
 .Quote
-    overflow-y: auto
-    visibility: hidden
+    overflow: hidden
     min-height: 18vh
     max-height: 25vh
 
@@ -9,4 +8,4 @@
         visibility: visible
 
     &:hover
-        visibility: visible
+        overflow-y: auto
